@@ -1,14 +1,26 @@
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadPoolExecutor;
+
 public class Main2 {
     private static int MAX=10;
     private static CountDownLatch latch=new CountDownLatch(MAX);
     public static void main(String[] args) throws InterruptedException {
+
+        /*ThreadPoolExecutor threadPoolExecutor = (ThreadPoolExecutor) Executors.newVirtualThreadPerTaskExecutor();
+        threadPoolExecutor.setCorePoolSize(1);
+        threadPoolExecutor.setMaximumPoolSize(1);*/
+
         long beg = System.currentTimeMillis();
 
-        for (int i = 0; i < MAX; i++) {
+        List<Integer> list = List.of(1, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 5, 5, 5, 6, 6, 6, 7, 7, 7, 8, 8, 8, 9, 9, 9);
+
+
+        for (int i = 0; i < list.size(); i++) {
             int finalI = i;
-            //new Thread(() -> printVal(finalI)).start();
-            Thread.startVirtualThread(() -> printVal(finalI));
+            //new Thread(() -> printVal(list.get(finalI), finalI)).start();
+            Thread.startVirtualThread(() ->printVal(list.get(finalI), finalI));
         }
 
         latch.await();
@@ -17,14 +29,14 @@ public class Main2 {
         long end = System.currentTimeMillis();
         System.out.println(end-beg);
     }
-    private static void printVal(int value) {
-        System.out.println("Printing : "+value+"---"+Thread.currentThread());
+    private static void printVal(int value, int index) {
+        System.out.println("start : "+value+" index : "+index+" "+Thread.currentThread());
         try {
             Thread.sleep(5000);
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
-        System.out.println("Printed : "+value+"---"+Thread.currentThread());
+        System.out.println("end : "+value+" index : "+index+" "+Thread.currentThread());
         latch.countDown();
     }
 }
